[tool.poetry]
name = "python-project-lvl3"
version = "0.1.0"
description = "project3"
authors = ["hellhamster"]
packages = [
 { include = "page_loader" },
]


[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
flake8 = "^4.0.1"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pageloader = "page_loader.page_loader:main"